Sorting homepage overflow issue.

--- a/public/css/front-end/homepage.styl
+++ b/public/css/front-end/homepage.styl
@@ -28,6 +28,8 @@ header
 
 .blog-stubs
 
+  overflow-x hidden
+
   a.title
     padding-left 0
     display block
